# quark

./: .gitignore  Cargo.toml  PKGBUILD  README.md  install.py
amphetamine/: Cargo.toml  build.rs
amphetamine-c23/: Kbuild  Makefile  test_triskelion.py  triskelion.h  triskelion_dispatch.c  triskelion_internal.h  triskelion_main.c  triskelion_objects.c  triskelion_queue.c  triskelion_sync.c
amphetamine/include/: triskelion_shm.h
amphetamine/src/: analyze.rs  cli.rs  clone.rs  configure.rs  event_loop.rs  gaming.rs  ipc.rs  launcher.rs  log.rs  main.rs  ntsync.rs  objects.rs  packager.rs  pe_patch.rs  profile.rs  protocol.rs  protocol_generated.rs.fallback  queue.rs  registry.rs  shm.rs  status.rs  sync.rs
c23/: launcher.rs
patches/: APPLY.md
patches/wine/: 004-win32u-guard-null-shared-object-deref.patch  012-ntdll-eac-loadorder.patch  (+6 more)
rust/: Cargo.toml  build.rs
rust/src/: log.rs
rust/src/parallax/: display_info.rs  main.rs
rust/src/quark/: launcher.rs
rust/src/triskelion/: com_classes.rs  csp_loop.rs  display.rs  intel.rs  ipc.rs  main.rs  objects.rs  protocol_remap.rs  registry.rs  sent_messages.rs  slab.rs
rust/src/triskelion/event_loop/: client.rs  completion.rs  file_io.rs  handles.rs  mod.rs  pipes.rs  process.rs  registry_handlers.rs  side_tables.rs  sync.rs  thread.rs  token.rs  window.rs
tests/: amphetamine-tests.py  diagnose_all.py  diagnose_window.py  iterate.py  montauk_compare.py  test_package.py  trace_display_init.py  trace_fused_exe.py  trace_opcodes.py  trace_stock_proton.py  triskelion-tests.py  util.py  verify_patches.py
(+2 files in other folders)
